--- a/portafolio.html
+++ b/portafolio.html
@@ -28,22 +28,22 @@
           <tr>
             <td>2</td>
             <td>Intruducción a CSS</td>
-            <td><img src=""></td>
+            <td><img src="./assets/img/desafio_2.jpg"></td>
           </tr>
           <tr>
             <td>3<td>
             <td>Aliniando contenido con Flex</td>
-            <td><img src=""></td>
+            <td><img src="./assets/img/desafio_3.jpg"></td>
           </tr>
           <tr>
             <td>4<td>
             <td>Bootstrap</td>
-            <td><img src=""></td>
+            <td><img src="./assets/img/desafio_4.jpg"></td>
           </tr>
           <tr>
             <td>5<td>
             <td>Terminal, Git y Github</td>
-            <td><img src=""></td>
+            <td><img src="./assets/img/desafio_5.jpg"></td>
           </tr>
           <tr>
             <td>6<td>
