--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
    </div>
    </div>
     <hr>
-    <a href="./portafolio.html"> Portafolio</a> 
+    <a href="./portafolio.html" target="_blank"> Portafolio</a> 
     <br>
     <br>
 
