--- a/portafolio.html
+++ b/portafolio.html
@@ -22,31 +22,31 @@
           <tr>
             <td>1</td>
             <td>Introducción a html</td>
-            <td><img src="./assets/img/curriculum_tabla.png"/</td>
-         
+            <td><img src="./assets/img/curriculum_tabla.png"/></td>
           </tr>
+
           <tr>
             <td>2</td>
-            <td>Intruducción a CSS</td>
+            <td>Introducción a CSS</td>
             <td><img src="./assets/img/desafio_2.jpg"></td>
           </tr>
           <tr>
-            <td>3<td>
+            <td>3</td>
             <td>Aliniando contenido con Flex</td>
             <td><img src="./assets/img/desafio_3.jpg"></td>
           </tr>
           <tr>
-            <td>4<td>
+            <td>4</td>
             <td>Bootstrap</td>
             <td><img src="./assets/img/desafio_4.jpg"></td>
           </tr>
           <tr>
-            <td>5<td>
+            <td>5</td>
             <td>Terminal, Git y Github</td>
             <td><img src="./assets/img/desafio_5.jpg"></td>
           </tr>
           <tr>
-            <td>6<td>
+            <td>6</td>
             <td>Trabajo colaborativo</td>
             <td><img src=""></td>
           </tr>
