--- a/index.html
+++ b/index.html
@@ -55,13 +55,8 @@
    </div>
    </div>
     <hr>
-    <a href="./portafolio.html" target="_blank"> Portafolio</a> 
-    <br>
-    <br>
-
-
-   <footer>
-
+   <footer class="text-center">
+        <a href="./portafolio.html" target="_blank"> Portafolio</a> 
    </footer>
 </body>
 </html>
